--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,8 @@ footer {
 }
 
 .titolo-sezione {
-    margin: 60px 0 30px 252px;
+    margin: 60px auto 30px auto;
+    max-width: 1029px;
 }
 
 .blocco-sezione {
