--- a/css/switzer.css
+++ b/css/switzer.css
@@ -28,7 +28,7 @@
 * Switzer VariableItalic (Variable font)
 
 *
-*/
+
 @font-face {
   font-family: 'Switzer-Thin';
   src: url('../fonts/Switzer-Thin.woff2') format('woff2'),
@@ -83,33 +83,37 @@
   font-display: swap;
   font-style: italic;
 }
+*/
+
 @font-face {
   font-family: 'Switzer-Regular';
-  src: url('../fonts/Switzer-Regular.woff2') format('woff2'),
-       url('../fonts/Switzer-Regular.woff') format('woff'),
-       url('../fonts/Switzer-Regular.ttf') format('truetype');
+  src: url('../font/Switzer-Regular.woff2') format('woff2'),
+       url('../font/Switzer-Regular.woff') format('woff'),
+       url('../font/Switzer-Regular.ttf') format('truetype');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Switzer-Italic';
-  src: url('../fonts/Switzer-Italic.woff2') format('woff2'),
-       url('../fonts/Switzer-Italic.woff') format('woff'),
-       url('../fonts/Switzer-Italic.ttf') format('truetype');
+  src: url('../font/Switzer-Italic.woff2') format('woff2'),
+       url('../font/Switzer-Italic.woff') format('woff'),
+       url('../font/Switzer-Italic.ttf') format('truetype');
   font-weight: 400;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'Switzer-Medium';
-  src: url('../fonts/Switzer-Medium.woff2') format('woff2'),
-       url('../fonts/Switzer-Medium.woff') format('woff'),
-       url('../fonts/Switzer-Medium.ttf') format('truetype');
+  src: url('../font/Switzer-Medium.woff2') format('woff2'),
+       url('../font/Switzer-Medium.woff') format('woff'),
+       url('../font/Switzer-Medium.ttf') format('truetype');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
 }
+
+/*
 @font-face {
   font-family: 'Switzer-MediumItalic';
   src: url('../fonts/Switzer-MediumItalic.woff2') format('woff2'),
@@ -137,15 +141,19 @@
   font-display: swap;
   font-style: italic;
 }
+*/
+
 @font-face {
   font-family: 'Switzer-Bold';
-  src: url('../fonts/Switzer-Bold.woff2') format('woff2'),
-       url('../fonts/Switzer-Bold.woff') format('woff'),
-       url('../fonts/Switzer-Bold.ttf') format('truetype');
+  src: url('../font/Switzer-Bold.woff2') format('woff2'),
+       url('../font/Switzer-Bold.woff') format('woff'),
+       url('../font/Switzer-Bold.ttf') format('truetype');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
 }
+
+/*
 @font-face {
   font-family: 'Switzer-BoldItalic';
   src: url('../fonts/Switzer-BoldItalic.woff2') format('woff2'),
@@ -191,6 +199,8 @@
   font-display: swap;
   font-style: italic;
 }
+*/
+
 /**
 * This is a variable font
 * You can control variable axes as shown below:
